src/main/java/clangcompiler/antlr/CGrammarParser.java
// $ANTLR 3.5.2 D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g 2015-11-22 15:20:41
package clangcompiler.antlr; 

import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings("all")
public class CGrammarParser extends Parser {
	public static final String[] tokenNames = new String[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "ADD_ASSIGN", "AND", "ARRAY", 
		"ARRAYCALL", "ASSIGN", "BEGIN", "BLOCK", "BREAK", "CHAR", "CHR", "CONTINUE", 
		"DECLARE", "DIV", "DIV_ASSIGN", "DO", "DOUBLE", "DOWHILE", "ELSE", "END", 
		"EQ", "FOR", "FUNC", "FUNCCALL", "IDENT", "IF", "INT", "LE", "LT", "ME", 
		"ML_COMMENT", "MOD", "MOD_ASSIGN", "MT", "MUL", "MUL_ASSIGN", "NE", "NOT", 
		"NUMBER", "OR", "PARAMS", "PROGRAM", "RETURN", "SL_COMMENT", "STR", "STRING", 
		"SUB", "SUB_ASSIGN", "UNKNOWN", "VARDECL", "VOID", "WHILE", "WS", "'('", 
		"')'", "','", "';'", "'['", "']'"
	};
	public static final int EOF=-1;
	public static final int T__57=57;
	public static final int T__58=58;
	public static final int T__59=59;
	public static final int T__60=60;
	public static final int T__61=61;
	public static final int T__62=62;
	public static final int ADD=4;
	public static final int ADD_ASSIGN=5;
	public static final int AND=6;
	public static final int ARRAY=7;
	public static final int ARRAYCALL=8;
	public static final int ASSIGN=9;
	public static final int BEGIN=10;
	public static final int BLOCK=11;
	public static final int BREAK=12;
	public static final int CHAR=13;
	public static final int CHR=14;
	public static final int CONTINUE=15;
	public static final int DECLARE=16;
	public static final int DIV=17;
	public static final int DIV_ASSIGN=18;
	public static final int DO=19;
	public static final int DOUBLE=20;
	public static final int DOWHILE=21;
	public static final int ELSE=22;
	public static final int END=23;
	public static final int EQ=24;
	public static final int FOR=25;
	public static final int FUNC=26;
	public static final int FUNCCALL=27;
	public static final int IDENT=28;
	public static final int IF=29;
	public static final int INT=30;
	public static final int LE=31;
	public static final int LT=32;
	public static final int ME=33;
	public static final int ML_COMMENT=34;
	public static final int MOD=35;
	public static final int MOD_ASSIGN=36;
	public static final int MT=37;
	public static final int MUL=38;
	public static final int MUL_ASSIGN=39;
	public static final int NE=40;
	public static final int NOT=41;
	public static final int NUMBER=42;
	public static final int OR=43;
	public static final int PARAMS=44;
	public static final int PROGRAM=45;
	public static final int RETURN=46;
	public static final int SL_COMMENT=47;
	public static final int STR=48;
	public static final int STRING=49;
	public static final int SUB=50;
	public static final int SUB_ASSIGN=51;
	public static final int UNKNOWN=52;
	public static final int VARDECL=53;
	public static final int VOID=54;
	public static final int WHILE=55;
	public static final int WS=56;

	// delegates
	public Parser[] getDelegates() {
		return new Parser[] {};
	}

	// delegators


	public CGrammarParser(TokenStream input) {
		this(input, new RecognizerSharedState());
	}
	public CGrammarParser(TokenStream input, RecognizerSharedState state) {
		super(input, state);
	}

	protected TreeAdaptor adaptor = new CommonTreeAdaptor();

	public void setTreeAdaptor(TreeAdaptor adaptor) {
		this.adaptor = adaptor;
	}
	public TreeAdaptor getTreeAdaptor() {
		return adaptor;
	}
	@Override public String[] getTokenNames() { return CGrammarParser.tokenNames; }
	@Override public String getGrammarFileName() { return "D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g"; }


	public static class assign_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "assign"
	// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:112:1: assign : ( ASSIGN | ADD_ASSIGN | SUB_ASSIGN | MUL_ASSIGN | DIV_ASSIGN | MOD_ASSIGN );
	public final CGrammarParser.assign_return assign() throws RecognitionException {
		CGrammarParser.assign_return retval = new CGrammarParser.assign_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set1=null;

		Object set1_tree=null;

		try {
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:112:8: ( ASSIGN | ADD_ASSIGN | SUB_ASSIGN | MUL_ASSIGN | DIV_ASSIGN | MOD_ASSIGN )
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:
			{
			root_0 = (Object)adaptor.nil();


			set1=input.LT(1);
			if ( input.LA(1)==ADD_ASSIGN||input.LA(1)==ASSIGN||input.LA(1)==DIV_ASSIGN||input.LA(1)==MOD_ASSIGN||input.LA(1)==MUL_ASSIGN||input.LA(1)==SUB_ASSIGN ) {
				input.consume();
				if ( state.backtracking==0 ) adaptor.addChild(root_0, (Object)adaptor.create(set1));
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "assign"


	public static class type_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "type"
	// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:114:1: type : ( INT | CHAR | STRING | DOUBLE | VOID );
	public final CGrammarParser.type_return type() throws RecognitionException {
		CGrammarParser.type_return retval = new CGrammarParser.type_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set2=null;

		Object set2_tree=null;

		try {
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:114:6: ( INT | CHAR | STRING | DOUBLE | VOID )
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:
			{
			root_0 = (Object)adaptor.nil();


			set2=input.LT(1);
			if ( input.LA(1)==CHAR||input.LA(1)==DOUBLE||input.LA(1)==INT||input.LA(1)==STRING||input.LA(1)==VOID ) {
				input.consume();
				if ( state.backtracking==0 ) adaptor.addChild(root_0, (Object)adaptor.create(set2));
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "type"


	public static class array_call_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "array_call"
	// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:116:1: array_call : IDENT '[' term ']' -> ^( ARRAYCALL IDENT term ) ;
	public final CGrammarParser.array_call_return array_call() throws RecognitionException {
		CGrammarParser.array_call_return retval = new CGrammarParser.array_call_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token IDENT3=null;
		Token char_literal4=null;
		Token char_literal6=null;
		ParserRuleReturnScope term5 =null;

		Object IDENT3_tree=null;
		Object char_literal4_tree=null;
		Object char_literal6_tree=null;
		RewriteRuleTokenStream stream_IDENT=new RewriteRuleTokenStream(adaptor,"token IDENT");
		RewriteRuleTokenStream stream_61=new RewriteRuleTokenStream(adaptor,"token 61");
		RewriteRuleTokenStream stream_62=new RewriteRuleTokenStream(adaptor,"token 62");
		RewriteRuleSubtreeStream stream_term=new RewriteRuleSubtreeStream(adaptor,"rule term");

		try {
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:117:2: ( IDENT '[' term ']' -> ^( ARRAYCALL IDENT term ) )
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:117:4: IDENT '[' term ']'
			{
			IDENT3=(Token)match(input,IDENT,FOLLOW_IDENT_in_array_call852); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_IDENT.add(IDENT3);

			char_literal4=(Token)match(input,61,FOLLOW_61_in_array_call854); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_61.add(char_literal4);

			pushFollow(FOLLOW_term_in_array_call856);
			term5=term();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) stream_term.add(term5.getTree());
			char_literal6=(Token)match(input,62,FOLLOW_62_in_array_call858); if (state.failed) return retval; 
			if ( state.backtracking==0 ) stream_62.add(char_literal6);

			// AST REWRITE
			// elements: IDENT, term
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if ( state.backtracking==0 ) {
			retval.tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.getTree():null);

			root_0 = (Object)adaptor.nil();
			// 117:23: -> ^( ARRAYCALL IDENT term )
			{
				// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:117:26: ^( ARRAYCALL IDENT term )
				{
				Object root_1 = (Object)adaptor.nil();
				root_1 = (Object)adaptor.becomeRoot((Object)adaptor.create(ARRAYCALL, "ARRAYCALL"), root_1);
				adaptor.addChild(root_1, stream_IDENT.nextNode());
				adaptor.addChild(root_1, stream_term.nextTree());
				adaptor.addChild(root_0, root_1);
				}

			}


			retval.tree = root_0;
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "array_call"


	public static class group_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "group"
	// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:119:1: group : ( '(' ! term ')' !| func_call | NUMBER | STR | CHR | array_call | IDENT );
	public final CGrammarParser.group_return group() throws RecognitionException {
		CGrammarParser.group_return retval = new CGrammarParser.group_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token char_literal7=null;
		Token char_literal9=null;
		Token NUMBER11=null;
		Token STR12=null;
		Token CHR13=null;
		Token IDENT15=null;
		ParserRuleReturnScope term8 =null;
		ParserRuleReturnScope func_call10 =null;
		ParserRuleReturnScope array_call14 =null;

		Object char_literal7_tree=null;
		Object char_literal9_tree=null;
		Object NUMBER11_tree=null;
		Object STR12_tree=null;
		Object CHR13_tree=null;
		Object IDENT15_tree=null;

		try {
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:119:7: ( '(' ! term ')' !| func_call | NUMBER | STR | CHR | array_call | IDENT )
			int alt1=7;
			switch ( input.LA(1) ) {
			case 57:
				{
				alt1=1;
				}
				break;
			case IDENT:
				{
				switch ( input.LA(2) ) {
				case 61:
					{
					alt1=6;
					}
					break;
				case 57:
					{
					alt1=2;
					}
					break;
				case EOF:
				case ADD:
				case AND:
				case BEGIN:
				case BREAK:
				case CHAR:
				case CONTINUE:
				case DIV:
				case DO:
				case DOUBLE:
				case END:
				case EQ:
				case FOR:
				case IDENT:
				case IF:
				case INT:
				case LE:
				case LT:
				case ME:
				case MOD:
				case MT:
				case MUL:
				case NE:
				case OR:
				case RETURN:
				case STRING:
				case SUB:
				case VOID:
				case WHILE:
				case 58:
				case 59:
				case 60:
				case 62:
					{
					alt1=7;
					}
					break;
				default:
					if (state.backtracking>0) {state.failed=true; return retval;}
					int nvaeMark = input.mark();
					try {
						input.consume();
						NoViableAltException nvae =
							new NoViableAltException("", 1, 2, input);
						throw nvae;
					} finally {
						input.rewind(nvaeMark);
					}
				}
				}
				break;
			case NUMBER:
				{
				alt1=3;
				}
				break;
			case STR:
				{
				alt1=4;
				}
				break;
			case CHR:
				{
				alt1=5;
				}
				break;
			default:
				if (state.backtracking>0) {state.failed=true; return retval;}
				NoViableAltException nvae =
					new NoViableAltException("", 1, 0, input);
				throw nvae;
			}
			switch (alt1) {
				case 1 :
					// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:119:9: '(' ! term ')' !
					{
					root_0 = (Object)adaptor.nil();


					char_literal7=(Token)match(input,57,FOLLOW_57_in_group876); if (state.failed) return retval;
					pushFollow(FOLLOW_term_in_group879);
					term8=term();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, term8.getTree());

					char_literal9=(Token)match(input,58,FOLLOW_58_in_group881); if (state.failed) return retval;
					}
					break;
				case 2 :
					// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:120:5: func_call
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_func_call_in_group888);
					func_call10=func_call();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, func_call10.getTree());

					}
					break;
				case 3 :
					// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:121:5: NUMBER
					{
					root_0 = (Object)adaptor.nil();


					NUMBER11=(Token)match(input,NUMBER,FOLLOW_NUMBER_in_group895); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					NUMBER11_tree = (Object)adaptor.create(NUMBER11);
					adaptor.addChild(root_0, NUMBER11_tree);
					}

					}
					break;
				case 4 :
					// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:122:5: STR
					{
					root_0 = (Object)adaptor.nil();


					STR12=(Token)match(input,STR,FOLLOW_STR_in_group901); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					STR12_tree = (Object)adaptor.create(STR12);
					adaptor.addChild(root_0, STR12_tree);
					}

					}
					break;
				case 5 :
					// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:123:5: CHR
					{
					root_0 = (Object)adaptor.nil();


					CHR13=(Token)match(input,CHR,FOLLOW_CHR_in_group907); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					CHR13_tree = (Object)adaptor.create(CHR13);
					adaptor.addChild(root_0, CHR13_tree);
					}

					}
					break;
				case 6 :
					// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:124:5: array_call
					{
					root_0 = (Object)adaptor.nil();


					pushFollow(FOLLOW_array_call_in_group913);
					array_call14=array_call();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, array_call14.getTree());

					}
					break;
				case 7 :
					// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:125:5: IDENT
					{
					root_0 = (Object)adaptor.nil();


					IDENT15=(Token)match(input,IDENT,FOLLOW_IDENT_in_group919); if (state.failed) return retval;
					if ( state.backtracking==0 ) {
					IDENT15_tree = (Object)adaptor.create(IDENT15);
					adaptor.addChild(root_0, IDENT15_tree);
					}

					}
					break;

			}
			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "group"


	public static class mult_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "mult"
	// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:128:1: mult : group ( ( MUL | DIV | MOD ) ^ group )* ;
	public final CGrammarParser.mult_return mult() throws RecognitionException {
		CGrammarParser.mult_return retval = new CGrammarParser.mult_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set17=null;
		ParserRuleReturnScope group16 =null;
		ParserRuleReturnScope group18 =null;

		Object set17_tree=null;

		try {
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:128:6: ( group ( ( MUL | DIV | MOD ) ^ group )* )
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:128:8: group ( ( MUL | DIV | MOD ) ^ group )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_group_in_mult932);
			group16=group();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, group16.getTree());

			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:128:14: ( ( MUL | DIV | MOD ) ^ group )*
			loop2:
			while (true) {
				int alt2=2;
				int LA2_0 = input.LA(1);
				if ( (LA2_0==DIV||LA2_0==MOD||LA2_0==MUL) ) {
					alt2=1;
				}

				switch (alt2) {
				case 1 :
					// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:128:16: ( MUL | DIV | MOD ) ^ group
					{
					set17=input.LT(1);
					set17=input.LT(1);
					if ( input.LA(1)==DIV||input.LA(1)==MOD||input.LA(1)==MUL ) {
						input.consume();
						if ( state.backtracking==0 ) root_0 = (Object)adaptor.becomeRoot((Object)adaptor.create(set17), root_0);
						state.errorRecovery=false;
						state.failed=false;
					}
					else {
						if (state.backtracking>0) {state.failed=true; return retval;}
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_group_in_mult951);
					group18=group();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, group18.getTree());

					}
					break;

				default :
					break loop2;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "mult"


	public static class add_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "add"
	// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:129:1: add : mult ( ( ADD | SUB ) ^ mult )* ;
	public final CGrammarParser.add_return add() throws RecognitionException {
		CGrammarParser.add_return retval = new CGrammarParser.add_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set20=null;
		ParserRuleReturnScope mult19 =null;
		ParserRuleReturnScope mult21 =null;

		Object set20_tree=null;

		try {
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:129:5: ( mult ( ( ADD | SUB ) ^ mult )* )
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:129:7: mult ( ( ADD | SUB ) ^ mult )*
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_mult_in_add962);
			mult19=mult();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, mult19.getTree());

			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:129:13: ( ( ADD | SUB ) ^ mult )*
			loop3:
			while (true) {
				int alt3=2;
				int LA3_0 = input.LA(1);
				if ( (LA3_0==ADD||LA3_0==SUB) ) {
					alt3=1;
				}

				switch (alt3) {
				case 1 :
					// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:129:15: ( ADD | SUB ) ^ mult
					{
					set20=input.LT(1);
					set20=input.LT(1);
					if ( input.LA(1)==ADD||input.LA(1)==SUB ) {
						input.consume();
						if ( state.backtracking==0 ) root_0 = (Object)adaptor.becomeRoot((Object)adaptor.create(set20), root_0);
						state.errorRecovery=false;
						state.failed=false;
					}
					else {
						if (state.backtracking>0) {state.failed=true; return retval;}
						MismatchedSetException mse = new MismatchedSetException(null,input);
						throw mse;
					}
					pushFollow(FOLLOW_mult_in_add978);
					mult21=mult();
					state._fsp--;
					if (state.failed) return retval;
					if ( state.backtracking==0 ) adaptor.addChild(root_0, mult21.getTree());

					}
					break;

				default :
					break loop3;
				}
			}

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "add"


	public static class term_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "term"
	// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:130:1: term : add ;
	public final CGrammarParser.term_return term() throws RecognitionException {
		CGrammarParser.term_return retval = new CGrammarParser.term_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		ParserRuleReturnScope add22 =null;


		try {
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:130:6: ( add )
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:130:8: add
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_add_in_term989);
			add22=add();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, add22.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
			retval.tree = (Object)adaptor.rulePostProcessing(root_0);
			adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
			}
		}
		catch (RecognitionException re) {
			reportError(re);
			recover(input,re);
			retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);
		}
		finally {
			// do for sure before leaving
		}
		return retval;
	}
	// $ANTLR end "term"


	public static class compare_return extends ParserRuleReturnScope {
		Object tree;
		@Override
		public Object getTree() { return tree; }
	};


	// $ANTLR start "compare"
	// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:132:1: compare : term ( ME | LE | EQ | NE | LT | MT ) ^ term ;
	public final CGrammarParser.compare_return compare() throws RecognitionException {
		CGrammarParser.compare_return retval = new CGrammarParser.compare_return();
		retval.start = input.LT(1);

		Object root_0 = null;

		Token set24=null;
		ParserRuleReturnScope term23 =null;
		ParserRuleReturnScope term25 =null;

		Object set24_tree=null;

		try {
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:132:9: ( term ( ME | LE | EQ | NE | LT | MT ) ^ term )
			// D:\\CLangCompiler/src/main/java/clangcompiler/antlr/CGrammar.g:132:11: term ( ME | LE | EQ | NE | LT | MT ) ^ term
			{
			root_0 = (Object)adaptor.nil();


			pushFollow(FOLLOW_term_in_compare998);
			term23=term();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, term23.getTree());

			set24=input.LT(1);
			set24=input.LT(1);
			if ( input.LA(1)==EQ||(input.LA(1) >= LE && input.LA(1) <= ME)||input.LA(1)==MT||input.LA(1)==NE ) {
				input.consume();
				if ( state.backtracking==0 ) root_0 = (Object)adaptor.becomeRoot((Object)adaptor.create(set24), root_0);
				state.errorRecovery=false;
				state.failed=false;
			}
			else {
				if (state.backtracking>0) {state.failed=true; return retval;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				throw mse;
			}
			pushFollow(FOLLOW_term_in_compare1027);
			term25=term();
			state._fsp--;
			if (state.failed) return retval;
			if ( state.backtracking==0 ) adaptor.addChild(root_0, term25.getTree());

			}

			retval.stop = input.LT(-1);

			if ( state.backtracking==0 ) {
